@@ -1,3 +1,9 @@
+2002-12-30  Thomas E. Dickey  <dickey@invisible-island.net>
+
+	* src/acsplit/acmerge.c:
+	ignore attempts to merge stuff such as the AC_REVISION that I have embedded
+	in vile's aclocal.m4
+
 2002-02-16  Thomas E. Dickey  <dickey@invisible-island.net>
 
 	* src/hex/hex.c: add utf-8 output
